--- a/Pages/Admin/RoleList.cshtml
+++ b/Pages/Admin/RoleList.cshtml
@@ -19,10 +19,7 @@
                     <h5 class="card-title">@role.Name</h5>
                 </div>
                 <div class="card-footer">
-                       <a asp-area="Identity" asp-page="/Admin/CreateRole" 
-                       asp-route-roleId="@role.Id" class="btn btn-primary">
-                        Edit
-                    </a>
+                    <a class="btn btn-primary" asp-page="/Admin/EditRole" asp-route-id="@role.Id">Edit</a>
                     <a href="#" class="btn btn-danger">Delete</a>
                 </div>
             </div>
