--- a/Pages/Admin/EditRole.cshtml
+++ b/Pages/Admin/EditRole.cshtml
@@ -12,6 +12,19 @@
         <label asp-for="RoleName">Role Name</label>
         <input asp-for="RoleName" class="form-control" />
     </div>
+    <hr />
+    <h4>Assign Users</h4>
+
+    @foreach (var user in Model.Users)
+    {
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox"
+                   name="SelectedUserIds"
+                   value="@user.UserId"
+            @(user.IsSelected ? "checked" : "") />
+            <label class="form-check-label">@user.UserName</label>
+        </div>
+    }
 
     <button type="submit" class="btn btn-primary">Update</button>
 </form>
