--- a/Pages/Admin/CreateRole.cshtml
+++ b/Pages/Admin/CreateRole.cshtml
@@ -11,12 +11,24 @@
         <label asp-for="RoleName">Role Name</label>
         <input asp-for="RoleName" class="form-control" />
     </div>
+    <hr />
+    <h4>Assign Users</h4>
+
+    @foreach (var user in Model.AllUsers)
+    {
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox"
+                   name="SelectedUserIds"
+                   value="@user.Id" />
+            <label class="form-check-label">@user.UserName</label>
+        </div>
+    }
     <button type="submit" class="btn btn-primary">Create Role</button>
 </form>
 
-@if (!string.IsNullOrEmpty(Model.Message))
+@if (!string.IsNullOrEmpty(Model.StatusMessage))
 {
     <div class="alert alert-info mt-3">
-        @Model.Message
+        @Model.StatusMessage
     </div>
 }
