Page Directive added for dynamic Menu Permission

--- a/Pages/Admin/RoleList.cshtml
+++ b/Pages/Admin/RoleList.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/Admin/RoleList"
 @model Mini_Account_Management_System.Pages.Admin.ListRolesModel
 @{
     ViewData["Title"] = "All Roles";
