Page Directive added

--- a/Pages/Admin/EditRole.cshtml
+++ b/Pages/Admin/EditRole.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{id}"
+﻿@page "/Admin/EditRole/{id}"
 @model Mini_Account_Management_System.Pages.Admin.EditRoleModel
 @{
     ViewData["Title"] = "Edit Role";
