Page directive added for Permission Menu access

--- a/Pages/Admin/CreateRole.cshtml
+++ b/Pages/Admin/CreateRole.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/Admin/CreateRole"
 @model Mini_Account_Management_System.Pages.Admin.CreateRoleModel
 @{
     ViewData["Title"] = "Create Role";
