Page Directive added for Dynamic permission Menu Access

--- a/Pages/Admin/DeleteRole.cshtml
+++ b/Pages/Admin/DeleteRole.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{id}"
+﻿@page "/Admin/DeleteRole/{id}"
 @model Mini_Account_Management_System.Pages.Admin.DeleteRoleModel
 @{
     ViewData["Title"] = "Delete Role";
