Page directive Added for Dynamic Menu Permission

--- a/Pages/Admin/AssignPermissions.cshtml
+++ b/Pages/Admin/AssignPermissions.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/Admin/AssignPermissions"
 @model Mini_Account_Management_System.Pages.Admin.AssignPermissionsModel
 @{
     ViewData["Title"] = "Assign Permissions";
