Page Directive added

--- a/Pages/AccountsChart/Upsert.cshtml
+++ b/Pages/AccountsChart/Upsert.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/AccountsChart/Upsert"
 @model Mini_Account_Management_System.Pages.AccountsChart.UpsertModel
 @{
     ViewData["Title"] = Model.Input.AccountId == 0 ? "Create Account" : "Edit Account";
