Page Directive added for Menu Access Permission

--- a/Pages/AccountsChart/Index.cshtml
+++ b/Pages/AccountsChart/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page
+﻿@page "/AccountsChart/Index"
 @model Mini_Account_Management_System.Pages.AccountsChart.IndexModel
 @{
     ViewData["Title"] = "Chart of Accounts";
