--- a/Pages/Voucher/ExportVoucher.cshtml
+++ b/Pages/Voucher/ExportVoucher.cshtml
@@ -11,7 +11,12 @@
     <div class="alert alert-success">@TempData["SuccessMessage"]</div>
     TempData["SuccessMessage"] = null;
 }
-
+<div class="text-end mb-3">
+    <a class="btn btn-primary" style="width:auto"
+       asp-page="/Voucher/VoucherEntry">
+        Add Voucher
+    </a>
+</div>
 <!-- Search Form -->
 <form method="get">
     <div class="row mb-3">
