--- a/Pages/AppResources/ResourcesList.cshtml
+++ b/Pages/AppResources/ResourcesList.cshtml
@@ -5,7 +5,11 @@
 }
 
 <h2>Application Resources</h2>
-
+@if (TempData["SuccessMessage"] != null)
+{
+    <div class="alert alert-success">@TempData["SuccessMessage"]</div>
+    TempData["SuccessMessage"] = null;
+}
 <form method="post">
     <input type="hidden" asp-for="Input.AppResourceId" />
     <div class="mb-2">
